<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Android Trivia</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Android Trivia</string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="H_Name_text">Name : </string>
    <string name="H_Nickname_text">Nickname : </string>
    <string name="H_Age_text">Age : </string>
    <string name="H_University_text">University : </string>
    <string name="Name_text">Thatthon kusinrum.</string>
    <string name="Nickname_text">That.</string>
    <string name="Age_text"> 20 Year.</string>
    <string name="University_text">Rajamangala University of Technology Isan.</string>
    <string name="todo">TODO</string>
    <string name="photo" />
    <string name="conTact">Contact</string>
    <string name="H_facebook">Facebook :</string>
    <string name="facebook">Tuchton Tuch.</string>
    <string name="H_Line">Line :</string>
    <string name="line">ttucht.</string>
    <string name="H_phone">Phone :</string>
    <string name="phone">0610507686</string>
    <string name="H_email">Email :</string>
    <string name="email">tattonman001@gmail.com</string>
    <string name="menu">Menu</string>

    <string name="list">List</string>
</resources>
