<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.navigation.AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="389dp"
            android:layout_height="205dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Hname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/H_Name_text"
            android:textColor="#009688"
            android:textSize="@dimen/H_Text_Size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/Hnickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/H_Nickname_text"
            android:textColor="#009688"
            android:textSize="@dimen/H_Text_Size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/Hname"
            app:layout_constraintTop_toBottomOf="@+id/Hname" />

        <TextView
            android:id="@+id/Hage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/H_Age_text"
            android:textColor="#009688"
            android:textSize="@dimen/H_Text_Size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/Hname"
            app:layout_constraintTop_toBottomOf="@+id/Hnickname" />

        <TextView
            android:id="@+id/Huniversity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/H_University_text"
            android:textColor="#009688"
            android:textSize="@dimen/H_Text_Size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/Hname"
            app:layout_constraintTop_toBottomOf="@+id/Hage" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/Name_text"
            android:textColor="#0E0C0C"
            android:textSize="@dimen/Text_Size"
            app:layout_constraintBaseline_toBaselineOf="@+id/Hname"
            app:layout_constraintStart_toEndOf="@+id/Hname" />

        <TextView
            android:id="@+id/nicknameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/Nickname_text"
            android:textColor="#0B0707"
            android:textSize="@dimen/Text_Size"
            app:layout_constraintBaseline_toBaselineOf="@+id/Hnickname"
            app:layout_constraintStart_toEndOf="@+id/Hnickname" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/Age_text"
            android:textColor="#0E0808"
            android:textSize="@dimen/Text_Size"
            app:layout_constraintBaseline_toBaselineOf="@+id/Hage"
            app:layout_constraintStart_toEndOf="@+id/Hage" />

        <TextView
            android:id="@+id/universityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/University_text"
            android:textColor="#171414"
            android:textSize="@dimen/Text_Size"
            app:layout_constraintStart_toStartOf="@+id/Huniversity"
            app:layout_constraintTop_toBottomOf="@+id/Huniversity" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="303dp"
            android:layout_height="284dp"
            android:src="@drawable/myphoto2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/universityText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>