<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.navigation.RulesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="387dp"
            android:layout_height="110dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/contact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/facebook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/HFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/H_facebook"
            android:textColor="#F44336"
            android:textSize="@dimen/H_Text_Size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView4" />

        <TextView
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/facebook"
            android:textColor="#000000"
            android:textSize="@dimen/Text_Size"
            app:layout_constraintBaseline_toBaselineOf="@+id/HFacebook"
            app:layout_constraintStart_toEndOf="@+id/HFacebook" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/line"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/HLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/H_Line"
            android:textColor="#F44336"
            android:textSize="@dimen/H_Text_Size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView5" />

        <TextView
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/line"
            android:textColor="#000000"
            android:textSize="@dimen/Text_Size"
            app:layout_constraintBaseline_toBaselineOf="@+id/HLine"
            app:layout_constraintStart_toEndOf="@+id/HLine" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/telephone"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <TextView
            android:id="@+id/Hphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/H_phone"
            android:textColor="#F44336"
            android:textSize="@dimen/H_Text_Size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintStart_toEndOf="@+id/imageView7" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/phone"
            android:textColor="#000000"
            app:layout_constraintBaseline_toBaselineOf="@+id/Hphone"
            app:layout_constraintStart_toEndOf="@+id/Hphone" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/mail"
            app:layout_constraintStart_toStartOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <TextView
            android:id="@+id/HEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/H_email"
            android:textColor="#F44336"
            android:textSize="@dimen/H_Text_Size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintStart_toEndOf="@+id/imageView9" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="@dimen/Text_Size"
            app:layout_constraintBaseline_toBaselineOf="@+id/HEmail"
            app:layout_constraintStart_toEndOf="@+id/HEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
